--- a/simulate_python/pyproject.toml
+++ b/simulate_python/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "mujoco>=3.3.4",
     "mujoco-py>=2.1.2.14",
     "numpy>=2.3.1",
+    "scipy>=1.16.0",
     "stable-baselines3>=2.6.0",
     "tensorboard>=2.19.0",
 ]
